Documentation edits made through Mintlify web editor

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,13 +1,15 @@
 ---
-title: "Quickstart"
-description: "Start building awesome documentation in minutes"
+title: "Mulai dari sini"
+description: "Setelah login anda akan diarahkan ke halaman beranda."
 ---
 
-## Get started in three steps
+## Beranda
 
-Get your documentation site running locally and make your first customization.
+Halaman **Beranda** adalah pusat kontrol utama untuk memantau jalannya acara secara real-time. Semua aktivitas check-in dan data tamu ditampilkan di sini.
 
-### Step 1: Set up your local environment
+![Beranda Pn](/images/beranda.png)
+
+### **Menu Aksi Utama**
 
 <AccordionGroup>
   <Accordion title="Clone your docs locally" icon="copy">
