Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -1,14 +1,17 @@
 ---
-title: "Digital Guestbook"
-description: "Halaman ini berisi panduan lengkap dalam menggunakan produk Digital Guestbook by Foreverr Invitation, mulai dari awal hingga seluruh isi fitur dan tools pendukungnya."
+title: "Pengenalan"
 ---
 
-## Setting up
+Dokumen ini disusun untuk memberikan panduan teknis dalam penggunaan **Digital Guestbook by Foreverr Invitation**. Seluruh isi dokumen mencakup:
 
-Get your documentation site up and running in minutes.
+- Penjelasan awal mengenai sistem dan cara akses.
+- Uraian mendetail mengenai setiap fitur utama.
+- Petunjuk penggunaan tools pendukung.
 
-<Card title="Start here" icon="rocket" horizontal href="/quickstart">
-  Follow our three step quickstart guide.
+Tujuan utama dokumentasi ini adalah memastikan seluruh pengguna dapat memahami fungsi sistem secara menyeluruh serta menggunakannya dengan efektif sesuai kebutuhan acara.
+
+<Card title="Mulai dari sini" icon="rocket" iconType="light" horizontal href="/quickstart">
+  lets go...
 </Card>
 
 ## Make it yours
