--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -5,9 +5,14 @@ description: "Setelah login anda akan diarahkan ke halaman beranda."
 
 ## Beranda
 
-Halaman **Beranda** adalah pusat kontrol utama untuk memantau jalannya acara secara real-time. Semua aktivitas check-in dan data tamu ditampilkan di sini.
+<img
+  src="/images/home.jpg"
+  alt="Home Jp"
+  title="Home Jp"
+  className="mx-auto"
+/>
 
-![Beranda Pn](/images/beranda.png)
+Halaman **Beranda** adalah pusat kontrol utama untuk memantau jalannya acara secara real-time. Semua aktivitas check-in dan data tamu ditampilkan di sini.
 
 ### **Menu Aksi Utama**
 
