Documentation edits made through Mintlify web editor

--- a/guestbook/home.mdx
+++ b/guestbook/home.mdx
@@ -1,5 +1,22 @@
 ---
-title: "Start here"
+title: "Beranda"
 description: "Setelah login anda akan diarahkan ke halaman beranda."
-mode: "custom"
+sidebarTitle: "Beranda"
 ---
+
+Halaman **Beranda** adalah pusat kontrol utama untuk memantau jalannya acara secara real-time. Semua aktivitas check-in dan data tamu ditampilkan di sini.
+
+![Home Jp](/images/home.jpg)
+
+## Menu Aksi Utama
+
+Di bagian tengah atas halaman, terdapat tombol-tombol utama untuk proses check-in:
+
+<AccordionGroup>
+  <Accordion title="Scan QR" defaultOpen icon="qrcode" iconType="regular">
+    Digunakan untuk memindai kode QR pada undangan tamu. Setiap tamu yang berhasil dipindai akan otomatis tercatat hadir.
+  </Accordion>
+  <Accordion title="Cari Tamu" icon="user-magnifying-glass" iconType="regular">
+    Menyediakan fitur pencarian cepat berdasarkan nama tamu pada daftar undangan. Cocok digunakan jika tamu tidak membawa QR code.
+  </Accordion>
+</AccordionGroup>
