--- a/index.mdx
+++ b/index.mdx
@@ -10,7 +10,7 @@ Dokumen ini disusun untuk memberikan panduan teknis dalam penggunaan **Digital G
 
 Tujuan utama dokumentasi ini adalah memastikan seluruh pengguna dapat memahami fungsi sistem secara menyeluruh serta menggunakannya dengan efektif sesuai kebutuhan acara.
 
-<Card title="Mulai dari sini" icon="rocket" iconType="light" horizontal href="/quickstart">
+<Card title="Mulai dari sini" icon="rocket" iconType="light" horizontal href="/guestbook/home">
   lets go...
 </Card>
 
