Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -10,6 +10,6 @@ Dokumen ini disusun untuk memberikan panduan teknis dalam penggunaan **Digital G
 
 Tujuan utama dokumentasi ini adalah memastikan seluruh pengguna dapat memahami fungsi sistem secara menyeluruh serta menggunakannya dengan efektif sesuai kebutuhan acara.
 
-<Card title="Mulai dari sini" icon="rocket" iconType="light" horizontal={false} href="/guestbook/home">
+<Card title="Mulai dari sini" icon="rocket" iconType="light" horizontal={false} href="digital-guestbook/home">
   lets go...
 </Card>
