--- a/index.mdx
+++ b/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Pengenalan"
+title: "Digital Guestbook"
 ---
 
 Dokumen ini disusun untuk memberikan panduan teknis dalam penggunaan **Digital Guestbook by Foreverr Invitation**. Seluruh isi dokumen mencakup:
@@ -10,6 +10,6 @@ Dokumen ini disusun untuk memberikan panduan teknis dalam penggunaan **Digital G
 
 Tujuan utama dokumentasi ini adalah memastikan seluruh pengguna dapat memahami fungsi sistem secara menyeluruh serta menggunakannya dengan efektif sesuai kebutuhan acara.
 
-<Card title="Mulai dari sini" icon="rocket" iconType="light" horizontal={false} href="digital-guestbook/home">
+<Card title="Mulai dari sini" icon="rocket" iconType="light" horizontal="false" href="digital-guestbook/home">
   lets go...
 </Card>
