Documentation edits made through Mintlify web editor

--- a/digital-guestbook/home.mdx
+++ b/digital-guestbook/home.mdx
@@ -13,7 +13,7 @@ Halaman **Beranda** adalah pusat kontrol utama untuk memantau jalannya acara sec
 Di bagian tengah atas halaman, terdapat tombol-tombol utama untuk proses check-in:
 
 <AccordionGroup>
-  <Accordion title="Scan QR" defaultOpen={false} icon="qrcode" iconType="regular">
+  <Accordion title="Scan QR" defaultOpen="false" icon="qrcode" iconType="regular">
     Digunakan untuk memindai kode QR pada undangan tamu. Setiap tamu yang berhasil dipindai akan otomatis tercatat hadir.
   </Accordion>
   <Accordion title="Cari Tamu" icon="user-magnifying-glass" iconType="regular">
@@ -23,7 +23,7 @@ Di bagian tengah atas halaman, terdapat tombol-tombol utama untuk proses check-i
     Digunakan untuk mencatat kehadiran tamu secara manual, tanpa QR. Biasanya dipakai jika tamu hadir mendadak atau tidak ada dalam daftar.
   </Accordion>
   <Accordion title="Check-In Scanner" icon="scanner-gun">
-    Mode khusus pemindaian cepat menggunakan alat Scanner **QR Code **2D untuk memperlancar antrean masuk tamu.
+    Mode khusus pemindaian cepat menggunakan alat Scanner \*\*QR Code \*\*2D untuk memperlancar antrean masuk tamu.
 
     <Warning>
       fitur ini hanya bisa digunakan menggunakan device PC/Laptop.
@@ -33,9 +33,9 @@ Di bagian tengah atas halaman, terdapat tombol-tombol utama untuk proses check-i
 
 ### 2. **Statistik Tamu Undangan**
 
- Bagian ini menampilkan data ringkasan kehadiran tamu:
+Bagian ini menampilkan data ringkasan kehadiran tamu:
 
-- **Live Report Kehadiran** → menunjukkan jumlah tamu yang sudah check-in dibanding total undangan.
+- **Live Report Kehadiran** → menunjukkan jumlah tamu yang sudah check-in dengan perbandingan total perkiraan tamu akan hadir.
 - **Tamu Tambahan** → jumlah tamu yang masuk melalui check-in manual.
 - **Total Tamu** → mencakup tamu yang konfirmasi hadir, belum konfirmasi, dan perkiraan kehadiran.
 - **Kategori Tamu** → rincian jumlah tamu berdasarkan kategori (Regular, VIP, VVIP).
