Documentation edits made through Mintlify web editor

--- a/tutorial/fitur-import-contact.mdx
+++ b/tutorial/fitur-import-contact.mdx
@@ -2,3 +2,35 @@
 title: "Mengaktifkan fitur import contact di iOS/iPhone"
 description: "Description of your new file."
 ---
+
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+import Video from '@site/src/components/Video';
+
+Fitur **Import Kontak** berfungsi untuk menambahkan data tamu secara otomatis dari daftar kontak pada perangkat smartphone.
+
+- Fitur ini hanya dapat digunakan di perangkat **Android** maupun **iOS**.
+- Khusus untuk perangkat **iPhone/iOS**, diperlukan konfigurasi tambahan agar fitur dapat berfungsi dengan baik.
+
+### Pengguna Android
+
+Untuk menggunkan fitur **Import Kontak** pada device Andriod diwajibkan untuk menggunakan browser **Chrome**.
+
+### Pengguna iPhone/iOS
+
+Ikuti langkah berikut untuk mengaktifkan akses kontak di iPhone/iOS:
+
+<Steps>
+  <Step title="Buka aplikasi Settings (Pengaturan). " stepNumber={1}>
+    Cari **Safari** pada pencarian.
+
+    ![Import Contact 1 Pn](/images/import-contact-1.png)
+  </Step>
+  <Step title="Pengaturan Safari iOS">
+    Di Pengaturan Safari scroll ke bagian paling bawah lalu pilih **Advanced / Lanjutan**.
+
+    ![Import Contact 2 Pn](/images/import-contact-2.png)
+  </Step>
+</Steps>
+
+import Timeline, { TimelineItem } from '@site/src/components/Timeline';
