Documentation edits made through Mintlify web editor

--- a/tutorial/fitur-import-contact.mdx
+++ b/tutorial/fitur-import-contact.mdx
@@ -1,6 +1,5 @@
 ---
 title: "Mengaktifkan fitur import contact di iOS/iPhone"
-description: "Description of your new file."
 ---
 
 import Tabs from '@theme/Tabs';
@@ -26,10 +25,23 @@ Ikuti langkah berikut untuk mengaktifkan akses kontak di iPhone/iOS:
 
     ![Import Contact 1 Pn](/images/import-contact-1.png)
   </Step>
-  <Step title="Pengaturan Safari iOS">
+  <Step title="Pengaturan Safari">
     Di Pengaturan Safari scroll ke bagian paling bawah lalu pilih **Advanced / Lanjutan**.
 
     ![Import Contact 2 Pn](/images/import-contact-2.png)
+  </Step>
+  <Step title="Advanced / Lanjutan">
+    Scroll paling bawah pilih **Feature Flags / Bendera Fitur**.
+
+    ![Import Contact 3 Pn](/images/import-contact-3.png)
+  </Step>
+  <Step title="Feature Flags / Bendera Fitur">
+    Scroll kebawah cari Contact **Picker API** lalu aktifkan.
+
+    ![Import Contact 4 Pn](/images/import-contact-4.png)
+  </Step>
+  <Step title="Pengaturan Selesai">
+    Kembali ke Aplikasi **Safari** buka halaman Daftar Tamu kemudian coba kembali klik tombol Import Kontak.
   </Step>
 </Steps>
 
