Documentation edits made through Mintlify web editor

--- a/tutorial/fitur-import-contact.mdx
+++ b/tutorial/fitur-import-contact.mdx
@@ -19,30 +19,37 @@ Untuk menggunkan fitur **Import Kontak** pada device Andriod diwajibkan untuk me
 
 Ikuti langkah berikut untuk mengaktifkan akses kontak di iPhone/iOS:
 
-<Steps>
-  <Step title="Buka aplikasi Settings (Pengaturan). " stepNumber={1}>
-    Cari **Safari** pada pencarian.
+<Tabs>
+  <Tab title="📖 Baca Panduan">
+    <Steps>
+      <Step title="Buka aplikasi Settings (Pengaturan). " stepNumber={1}>
+        Cari **Safari** pada pencarian.
 
-    ![Import Contact 1 Pn](/images/import-contact-1.png)
-  </Step>
-  <Step title="Pengaturan Safari">
-    Di Pengaturan Safari scroll ke bagian paling bawah lalu pilih **Advanced / Lanjutan**.
+        ![Import Contact 1 Pn](/images/import-contact-1.png)
+      </Step>
+      <Step title="Pengaturan Safari">
+        Di Pengaturan Safari scroll ke bagian paling bawah lalu pilih **Advanced / Lanjutan**.
 
-    ![Import Contact 2 Pn](/images/import-contact-2.png)
-  </Step>
-  <Step title="Advanced / Lanjutan">
-    Scroll paling bawah pilih **Feature Flags / Bendera Fitur**.
+        ![Import Contact 2 Pn](/images/import-contact-2.png)
+      </Step>
+      <Step title="Advanced / Lanjutan">
+        Scroll paling bawah pilih **Feature Flags / Bendera Fitur**.
 
-    ![Import Contact 3 Pn](/images/import-contact-3.png)
-  </Step>
-  <Step title="Feature Flags / Bendera Fitur">
-    Scroll kebawah cari Contact **Picker API** lalu aktifkan.
+        ![Import Contact 3 Pn](/images/import-contact-3.png)
+      </Step>
+      <Step title="Feature Flags / Bendera Fitur">
+        Scroll kebawah cari Contact **Picker API** lalu aktifkan.
 
-    ![Import Contact 4 Pn](/images/import-contact-4.png)
-  </Step>
-  <Step title="Pengaturan Selesai">
-    Kembali ke Aplikasi **Safari** buka halaman Daftar Tamu kemudian coba kembali klik tombol Import Kontak.
-  </Step>
-</Steps>
+        ![Import Contact 4 Pn](/images/import-contact-4.png)
+      </Step>
+      <Step title="Pengaturan Selesai">
+        Kembali ke Aplikasi **Safari** buka halaman Daftar Tamu kemudian coba kembali klik tombol Import Kontak.
+      </Step>
+    </Steps>
+  </Tab>
+  <Tab title="🎬 Video Panduan">
+    
+  </Tab>
+</Tabs>
 
-import Timeline, { TimelineItem } from '@site/src/components/Timeline';
+<iframe width="100%" height="300px" src="https://www.youtube-nocookie.com/embed/WixusWtc5g4?rel=0&modestbranding=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen />
